correction des cards version tablette

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ a {
     padding-top: 30px;
 }
 
-/************* Nav ***********/
 .headerLogo {
     display: flex;
     justify-content: space-between;
@@ -74,6 +73,7 @@ a {
     padding-bottom: 60px;
 }
 
+/************* Nav ***********/
 nav {
     display: flex;
     gap: 68px;
@@ -423,11 +423,11 @@ footer {
     }
 
     .hebergements-cards .card {
-        width: 180px;
+        width: 268px;
     }
 
     .hebergements-cards .card img {
-        width: 180px;
+        width: 268px;
     }
 
     .hebergements-cards .card .card-txt {
@@ -468,7 +468,7 @@ footer {
     /************ Activités tablette***********/
 
     .activites h2 {
-        max-width: 620px;
+        max-width: 864px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -480,7 +480,7 @@ footer {
     }
 
     .activites-cards .card {
-        width: 163px;
+        width: 193px;
         height: 270px;
     }
 
@@ -489,7 +489,7 @@ footer {
     }
 
     .activites-cards .card img {
-        width: 163px;
+        width: 193px;
         height: 200px;
     }
 
@@ -504,7 +504,7 @@ footer {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     .main-container {
         padding: 0;
     }
@@ -513,8 +513,7 @@ footer {
     .hebergements h2,
     .activites h2 {
         max-width: 330px;
-        margin-left: auto;
-        margin-right: auto;
+        
     }
 
     /****** Header smartphone ***********/
@@ -643,6 +642,10 @@ footer {
 
     /*********Hébergements téléphone *******/
 
+    .hebergement-title .section-title {
+        margin-left: 30px;
+    }
+
     .hebergements-cards .card {
         width: 335px;
     }
@@ -655,6 +658,11 @@ footer {
 
     .activites {
         width: auto;
+    }
+
+    .activites h2 {
+        width: 315px;
+        margin-left: 30px;
     }
 
     .activites-cards {
